Descripción de los cambios

--- a/frontend/candidate/candidate_register.html
+++ b/frontend/candidate/candidate_register.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MRX</title>
+    <title>Justice will prevail</title>
     <link rel="stylesheet" href="../css/candidate.css">
  
 </head>
 
 <body>
     <header>
-        <h1>Sistema de votacion</h1>
+        <h1>Voting System</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Volver</a></li>
-                <li><a href="candidate_list.html">Listado de Candidatos</a></li>
+                <li><a href="../index.html">Back</a></li>
+                <li><a href="candidate_list.html">
+                    List of Candidates</a></li>
             </ul>
         </nav>
 
@@ -23,16 +24,17 @@
 
     <main>
         <section id="inicio" class="seccion activa">
-            <h2>Bienvenido al Sistema de Votación</h2>
-            <p>Usa la barra de navegación para realizar acciones.</p>
+            <h2>Welcome to the Voting System</h2>
+            <p>Use the navigation bar to perform actions.</p>
         </section>
 
         <section id="candidato" class="seccion">
-            <h2>Registrar Candidato</h2>
+            <h2>
+                Register Candidate</h2>
             <form id="formCandidato">
-                <input type="text" id="nombreCandidato" placeholder="Nombre" required />
-                <input type="text" id="PartidoCandidato" placeholder="Nombre del Partido Politico" required />
-                <button type="submit">Guardar Candidato</button>
+                <input type="text" id="nombreCandidato" placeholder="Name" required />
+                <input type="text" id="PartidoCandidato" placeholder="Name of the Political Party" required />
+                <button type="submit">Save Candidate</button>
             </form>
         </section>
 
