--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MRX</title>
+    <title>Franccesco Pinedo</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -25,8 +25,8 @@
     <main>
         <section id="inicio" class="seccion activa">
             <h2>Welcome to the Voting System</h2>
-            <p><em>"In the midst of chaos, only firm will can find the path to order."</em></p>
-            <p>Developed by <strong>MrX</strong>, This system seeks to bring clarity and justice to the election XD. And I am CHAOS.</p>
+            <p><em>"Someone fought for your right to vote. Use it."</em></p>
+            <p>Sabías algo? <strong>if you're brainless ya gonna question it. So don't ask if you don't wanna know the start of something knew</strong>, Estamos más cerca de llegar al punto más lejano del universo que el de las particulas más lejana de nuestra piel</p>
 
         </section>
     </main>
