--- a/frontend/candidate/candidate_list.html
+++ b/frontend/candidate/candidate_list.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Listado de Candidatos</title>
+  <title>List of candidates</title>
   <link rel="stylesheet" href="../css/candidate_list.css">
 
 </head>
@@ -14,14 +14,14 @@
     <h3>Navegation</h3>
     <nav>
       <ul>
-        <li><a href="../candidato/candidate_register.html">Ir a Registrar Candidato</a></li>
-        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../candidato/candidate_register.html">Go to Register Candidate</a></li>
+        <li><a href="../index.html">Index</a></li>
       </ul>
     </nav>
 
   </header>
 
-  <h1>Lista de Candidatos</h1>
+  <h1>List of candidates</h1>
   <div class="contenedor-candidatos" id="contenedorCandidatos"></div>
 
   <script src="../js/candidate_list.js"></script>
